--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@ const DEFAULT_AWAY = 'AWAY TEAM';
       },[currentUser]);
 
       useEffect(()=>{
+
+
         // Clean up old multiplayer data
         try {
           const raw = localStorage.getItem('multiplayerMatch');
@@ -2857,15 +2859,17 @@ return(
           </div>
 
 
-          <div className={`${darkMode?'bg-gray-800 border-b border-gray-700':'bg-white'} shadow-md sticky top-48 z-40`}>
-            <div className="max-w-6xl mx-auto flex">
-              {(isViewer?['stats']:['stats','audio','referee',...(externalLinkUrl?['external']:[])]).map(tab=>(
-                <button key={tab} onClick={()=>setActiveTab(tab)} className={`flex-1 py-3 font-semibold text-sm ${activeTab===tab?(darkMode?'bg-blue-700 text-white':'bg-blue-600 text-white'):(darkMode?'bg-gray-700 text-gray-300':'bg-gray-100 text-gray-600')}`}>
-                  {tab==='audio'?'Audio':tab==='stats'?'Stats':tab==='referee'?'Referee':externalLinkTitle||'Link'}
-                </button>
-              ))}
-            </div>
-          </div>
+{!isViewer&&(
+  <div className={`${darkMode?'bg-gray-800 border-b border-gray-700':'bg-white'} shadow-md sticky top-48 z-40`}>
+    <div className="max-w-6xl mx-auto flex">
+      {['stats','audio','referee',...(externalLinkUrl?['external']:[])].map(tab=>(
+        <button key={tab} onClick={()=>setActiveTab(tab)} className={`flex-1 py-3 font-semibold text-sm ${activeTab===tab?(darkMode?'bg-blue-700 text-white':'bg-blue-600 text-white'):(darkMode?'bg-gray-700 text-gray-300':'bg-gray-100 text-gray-600')}`}>
+          {tab==='audio'?'Audio':tab==='stats'?'Stats':tab==='referee'?'Referee':externalLinkTitle||'Link'}
+        </button>
+      ))}
+    </div>
+  </div>
+)}
 
           <div className="max-w-6xl mx-auto p-4">
             {activeTab==='audio'&&<div>
