--- a/index.html
+++ b/index.html
@@ -2907,62 +2907,28 @@ return(
                       <div className="eq-bar w-1 bg-white rounded-full"></div>
                     </div>
                     <span>Pause Intro</span>
-                  </>:'▶ Play Intro'}
+                  </>:'Play Intro'}
                 </button>
               </div>
 
               <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-3 mb-3`}>
-                <h3 className={`text-xs font-semibold mb-2 ${darkMode?'text-white':''}`}>🚨 Goal</h3>
-                <div className="grid grid-cols-2 gap-2">
+                <div className="grid grid-cols-3 gap-2">
                   {[
                     {
                       sound: 'homeGoal',
-                      label: homeName,
+                      label: 'Goal',
                       bg: darkMode ? 'bg-blue-900 bg-opacity-40' : 'bg-blue-50',
                       hover: darkMode ? 'hover:bg-blue-900 hover:bg-opacity-60' : 'hover:bg-blue-100',
                       text: darkMode ? 'text-blue-200' : 'text-gray-800',
                       border: darkMode ? 'border-blue-700' : 'border-blue-200'
                     },
                     {
-                      sound: 'awayGoal',
-                      label: awayName,
-                      bg: darkMode ? 'bg-red-900 bg-opacity-40' : 'bg-red-50',
-                      hover: darkMode ? 'hover:bg-red-900 hover:bg-opacity-60' : 'hover:bg-red-100',
-                      text: darkMode ? 'text-red-200' : 'text-gray-800',
-                      border: darkMode ? 'border-red-700' : 'border-red-200'
-                    }
-                  ].map(btn => (
-                    <button
-                      key={btn.sound}
-                      onClick={() => playSound(btn.sound)}
-                      className={`${btn.bg} ${btn.hover} ${btn.text} border ${btn.border} py-3 rounded-lg font-semibold transition-colors flex items-center justify-center gap-2`}
-                    >
-                      {btn.label}
-                      {playingSound === btn.sound && <SoundEQ />}
-                    </button>
-                  ))}
-                </div>
-              </div>
-
-              <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-3 mb-3`}>
-                <h3 className={`text-xs font-semibold mb-2 ${darkMode?'text-white':''}`}>Penalty</h3>
-                <div className="grid grid-cols-2 gap-2">
-                  {[
-                    {
-                      sound: 'homePenalty',
-                      label: homeName,
-                      bg: darkMode ? 'bg-blue-900 bg-opacity-30' : 'bg-blue-50',
-                      hover: darkMode ? 'hover:bg-blue-900 hover:bg-opacity-50' : 'hover:bg-blue-100',
-                      text: darkMode ? 'text-blue-200' : 'text-gray-900',
-                      border: darkMode ? 'border-blue-700' : 'border-blue-300'
-                    },
-                    {
                       sound: 'awayPenalty',
-                      label: awayName,
-                      bg: darkMode ? 'bg-red-900 bg-opacity-30' : 'bg-red-50',
-                      hover: darkMode ? 'hover:bg-red-900 hover:bg-opacity-50' : 'hover:bg-red-100',
-                      text: darkMode ? 'text-red-200' : 'text-gray-900',
-                      border: darkMode ? 'border-red-700' : 'border-red-200'
+                      label: 'Penalty',
+                      bg: darkMode ? 'bg-blue-900 bg-opacity-40' : 'bg-blue-50',
+                      hover: darkMode ? 'hover:bg-blue-900 hover:bg-opacity-60' : 'hover:bg-blue-100',
+                      text: darkMode ? 'text-blue-200' : 'text-gray-800',
+                      border: darkMode ? 'border-blue-700' : 'border-blue-200'
                     }
                   ].map(btn => (
                     <button
@@ -2974,15 +2940,21 @@ return(
                       {playingSound === btn.sound && <SoundEQ />}
                     </button>
                   ))}
-                </div>
+
+              <button onClick={stopAllSounds} className={`w-full ${darkMode?'bg-blue-900 bg-opacity-40 hover:bg-blue-900 hover:bg-opacity-60 border border-blue-700 text-blue-200':'bg-blue-50 hover:bg-blue-100 border border-blue-200 text-gray-900'} rounded-lg font-semibold transition-colors`}>
+                ◾Stop
+              </button>
+ 
+
+               </div>
+
               </div>
 
-              <button onClick={stopAllSounds} className={`w-full ${darkMode?'bg-red-900 bg-opacity-40 hover:bg-red-900 hover:bg-opacity-60 border-2 border-red-700 text-red-200':'bg-red-50 hover:bg-red-100 border-2 border-red-300 text-gray-900'} py-2 rounded-lg font-semibold mb-3 transition-colors`}>
-                Stop All Sounds
-              </button>
+
+
 
               <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-3`}>
-                {!spotifyLoaded&&!spotifyLoading?<button onClick={loadSpotify} className={`w-full ${darkMode?'bg-green-700 hover:bg-green-600':'bg-green-600 hover:bg-green-700'} text-white py-8 rounded-lg font-semibold text-lg transition-colors`}>▶ Load Spotify</button>:spotifyLoading?<div className={`py-8 text-center ${darkMode?'text-gray-300':'text-gray-600'}`}><div className="animate-spin inline-block w-8 h-8 border-4 border-current border-t-transparent rounded-full mb-2"></div><div>Loading...</div></div>:<div style={{opacity:0,animation:'fadeIn 0.5s ease-in forwards'}}>{getSpotifyUrl(spotifyPlaylist)?<iframe style={{borderRadius:'12px'}} src={getSpotifyUrl(spotifyPlaylist)} width="100%" height="352" frameBorder="0" allowFullScreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>:<div className={`text-center py-8 ${darkMode?'text-gray-300':'text-gray-600'}`}>Invalid Spotify URL. Please check Settings.</div>}</div>}
+                {!spotifyLoaded&&!spotifyLoading?<button onClick={loadSpotify} className={`w-full ${darkMode?'bg-green-700 hover:bg-green-600':'bg-green-600 hover:bg-green-700'} text-white py-8 rounded-lg font-semibold text-lg transition-colors`}>Load Spotify</button>:spotifyLoading?<div className={`py-8 text-center ${darkMode?'text-gray-300':'text-gray-600'}`}><div className="animate-spin inline-block w-8 h-8 border-4 border-current border-t-transparent rounded-full mb-2"></div><div>Loading...</div></div>:<div style={{opacity:0,animation:'fadeIn 0.5s ease-in forwards'}}>{getSpotifyUrl(spotifyPlaylist)?<iframe style={{borderRadius:'12px'}} src={getSpotifyUrl(spotifyPlaylist)} width="100%" height="352" frameBorder="0" allowFullScreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>:<div className={`text-center py-8 ${darkMode?'text-gray-300':'text-gray-600'}`}>Invalid Spotify URL. Please check Settings.</div>}</div>}
               </div>
             </div>}
 
