--- a/index.html
+++ b/index.html
@@ -3012,7 +3012,7 @@ return(
                       ></iframe>
                       <div className={`text-center mt-3 text-xs ${darkMode?'text-gray-400':'text-gray-500'}`}>
                         <button onClick={() => setSpotifyFallback(true)} className={`${darkMode?'text-gray-400 hover:text-gray-300':'text-gray-600 hover:text-gray-800'} underline`}>
-                          Visa direktlänk istället
+                          Show direct link to playlist instead
                         </button>
                       </div>
                     </div>
